--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,6 +21,7 @@
 		<org.hibernate.validator.version>8.0.1.Final</org.hibernate.validator.version>
 		<springdoc.openapi.starter.webmvc.ui.version>2.5.0</springdoc.openapi.starter.webmvc.ui.version>
 		<org.apache.maven.plugins.version>3.3.1</org.apache.maven.plugins.version>
+		<hibernate.core.version>6.1.7.Final</hibernate.core.version>
 	</properties>
 	
 	<dependencies>
@@ -48,7 +49,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.1.7.Final</version>
+			<version>${hibernate.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
