--- a/event-management-system/src/main/resources/application.properties
+++ b/event-management-system/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=event-management-system
-logging.level.org.springframework.web=trace
+#logging.level.org.springframework.web=trace
+logging.level.org.com.ems=trace
 server.port=8080
 #server.servlet.context-path=/api
