--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,6 +23,7 @@
 		<springdoc.openapi.starter.webmvc.ui.version>2.5.0</springdoc.openapi.starter.webmvc.ui.version>
 		<org.apache.maven.plugins.version>3.3.1</org.apache.maven.plugins.version>
 		<hibernate.core.version>6.1.7.Final</hibernate.core.version>
+		<postgres.version>42.7.3</postgres.version>
 	</properties>
 	
 	<dependencies>
