Migrate fully to JDBC template using postgres

--- a/event-management-system/src/main/resources/properties/db.properties
+++ b/event-management-system/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
-# dsadas
+# SQL credentials
 org.com.ems.db.driver=org.postgresql.Driver
 org.com.ems.db.url=jdbc:postgresql://localhost:5433/event-management-system
 org.com.ems.db.username=user
