Fix issues with schema creation & other issues within object creation/edit

--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -1,36 +1,36 @@
 # Properties file to store the queries for CRUD operation in the DB
 
-# attendee
-org.com.ems.queries.attendee.save = INSERT INTO attendee (uuid, last_updated, first_name, last_name, ticket_ids) values(?,?,?,?,?)
-org.com.ems.queries.attendee.edit = UPDATE attendee SET uuid = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE uuid = ?
-org.com.ems.queries.attendee.get-all = SELECT * FROM attendee
-org.com.ems.queries.attendee.get-id = SELECT * FROM attendee WHERE uuid = ?
-org.com.ems.queries.attendee.delete-id = DELETE FROM attendee WHERE uuid = ?
+# attendees
+org.com.ems.queries.attendee.save = INSERT INTO attendees (id, last_updated, first_name, last_name, ticket_ids) values(?,?,?,?,?)
+org.com.ems.queries.attendee.edit = UPDATE attendee SET id = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE id = ?
+org.com.ems.queries.attendee.get-all = SELECT * FROM attendees
+org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = ?
+org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = ?
 
-# event
-org.com.ems.queries.event.save = INSERT INTO event (uuid, last_updated, name, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsor_id, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.event.edit = UPDATE event SET uuid = ?, last_updated = ?, name = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsor_id = ?, start_time = ?, duration = ? WHERE uuid = ?
-org.com.ems.queries.event.get-all = SELECT * FROM event
-org.com.ems.queries.event.get-id = SELECT * FROM event WHERE uuid = ?
-org.com.ems.queries.event.delete-id = DELETE FROM event WHERE uuid = ?
+# events
+org.com.ems.queries.event.save = INSERT INTO events (id, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsor_id, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.event.edit = UPDATE events SET id = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsor_id = ?, start_time = ?, duration = ? WHERE id = ?
+org.com.ems.queries.event.get-all = SELECT * FROM events
+org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = ?
+org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = ?
 
-# organizer
-org.com.ems.queries.organizer.save = INSERT INTO organizer (uuid, last_updated, name, website, description, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.organizer.edit = UPDATE organizer SET uuid = ?, last_updated = ?, name = ?, website = ?, description = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?
-org.com.ems.queries.organizer.get-all = SELECT * FROM organizer
-org.com.ems.queries.organizer.get-id = SELECT * FROM organizer WHERE uuid = ?
-org.com.ems.queries.organizer.delete-id = DELETE FROM organizer WHERE uuid = ?
+# organizers
+org.com.ems.queries.organizer.save = INSERT INTO organizers (id, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?
+org.com.ems.queries.organizer.get-all = SELECT * FROM organizers
+org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = ?
+org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = ?
 
-# sponsor
-org.com.ems.queries.sponsor.save = INSERT INTO sponsor (uuid, last_updated, name, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?)
-org.com.ems.queries.sponsor.edit = UPDATE sponsor SET uuid = ?, last_updated = ?, name = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?
-org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsor
-org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsor WHERE uuid = ?
-org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsor WHERE uuid = ?
+# sponsors
+org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?)
+org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?
+org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsors
+org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = ?
+org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = ?
 
-# ticket
-org.com.ems.queries.ticket.save = INSERT INTO ticket (uuid, last_updated, event_id, ticket_type, price, transferable, seat, section) values(?,?,?,?,?,?,?,?)
-org.com.ems.queries.ticket.edit = UPDATE ticket SET uuid = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?
-org.com.ems.queries.ticket.get-all = SELECT * FROM ticket
-org.com.ems.queries.ticket.get-id = SELECT * FROM ticket WHERE uuid = ?
-org.com.ems.queries.ticket.delete-id = DELETE FROM ticket WHERE uuid = ?
+# tickets
+org.com.ems.queries.ticket.save = INSERT INTO tickets (id, last_updated, event_id, ticket_type, price, transferable, seat, section) values(?,?,?,?,?,?,?,?)
+org.com.ems.queries.ticket.edit = UPDATE tickets SET id = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?
+org.com.ems.queries.ticket.get-all = SELECT * FROM tickets
+org.com.ems.queries.ticket.get-id = SELECT * FROM tickets WHERE id = ?
+org.com.ems.queries.ticket.delete-id = DELETE FROM tickets WHERE id = ?
