Fix h2 schema creation for integration tests

--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -2,7 +2,7 @@
 
 # attendees
 org.com.ems.queries.attendee.save = INSERT INTO attendees (id, last_updated, first_name, last_name, ticket_ids) values(?,?,?,?,?)
-org.com.ems.queries.attendee.edit = UPDATE attendee SET id = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE id = ?
+org.com.ems.queries.attendee.edit = UPDATE attendees SET id = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE id = ?
 org.com.ems.queries.attendee.get-all = SELECT * FROM attendees
 org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = ?
 org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = ?
