Change pom location

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 		<hibernate.core.version>6.1.7.Final</hibernate.core.version>
 		<postgres.version>42.7.3</postgres.version>
 	</properties>
+
+	<modules>
+		<module>event-management-system</module>
+	</modules>
 	
 	<dependencies>
 		<dependency>
@@ -40,5 +44,21 @@
 		</dependency>
 		
 	</dependencies>
+	<build>
+	            <plugins>
+				<plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${org.apache.maven.plugins.version}</version>
+            </plugin>
+
+			<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0</version>
+        </plugin>
+
+            </plugins>
+</build>
+
 	
 </project>
