Refactor integration tests

--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -16,21 +16,21 @@ org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = ?
 
 # organizers
 org.com.ems.queries.organizer.save = INSERT INTO organizers (id, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?
+org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
 org.com.ems.queries.organizer.get-all = SELECT * FROM organizers
 org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = ?
 org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = ?
 
 # sponsors
 org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?)
-org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?
+org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
 org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsors
 org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = ?
 org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = ?
 
 # tickets
 org.com.ems.queries.ticket.save = INSERT INTO tickets (id, last_updated, event_id, ticket_type, price, transferable, seat, section) values(?,?,?,?,?,?,?,?)
-org.com.ems.queries.ticket.edit = UPDATE tickets SET id = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?
+org.com.ems.queries.ticket.edit = UPDATE tickets SET id = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?  WHERE id = ?
 org.com.ems.queries.ticket.get-all = SELECT * FROM tickets
 org.com.ems.queries.ticket.get-id = SELECT * FROM tickets WHERE id = ?
 org.com.ems.queries.ticket.delete-id = DELETE FROM tickets WHERE id = ?
