--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -1,36 +1,36 @@
 # Properties file to store the queries for CRUD operation in the DB
 
 # attendees
-org.com.ems.queries.attendee.save = INSERT INTO attendees (id, last_updated, first_name, last_name, ticket_ids) values(?,?,?,?,?)
-org.com.ems.queries.attendee.edit = UPDATE attendees SET id = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE id = ?
+org.com.ems.queries.attendee.save = INSERT INTO attendees (id, created_at, last_updated, first_name, last_name, ticket_ids) values(?,?,?,?,?,?)
+org.com.ems.queries.attendee.edit = UPDATE attendees SET id = ?, created_at = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE id = ?
 org.com.ems.queries.attendee.get-all = SELECT * FROM attendees
 org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = ?
 org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = ?
 
 # events
-org.com.ems.queries.event.save = INSERT INTO events (id, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsor_id, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.event.edit = UPDATE events SET id = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsor_id = ?, start_time = ?, duration = ? WHERE id = ?
+org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsor_id, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.event.edit = UPDATE events SET id = ?, created_at = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsor_id = ?, start_time = ?, duration = ? WHERE id = ?
 org.com.ems.queries.event.get-all = SELECT * FROM events
 org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = ?
 org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = ?
 
 # organizers
-org.com.ems.queries.organizer.save = INSERT INTO organizers (id, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
+org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, created_at = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
 org.com.ems.queries.organizer.get-all = SELECT * FROM organizers
 org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = ?
 org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = ?
 
 # sponsors
-org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?)
-org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
+org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, created_at = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
 org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsors
 org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = ?
 org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = ?
 
 # tickets
-org.com.ems.queries.ticket.save = INSERT INTO tickets (id, last_updated, event_id, ticket_type, price, transferable, seat, section) values(?,?,?,?,?,?,?,?)
-org.com.ems.queries.ticket.edit = UPDATE tickets SET id = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?  WHERE id = ?
+org.com.ems.queries.ticket.save = INSERT INTO tickets (id, created_at, last_updated, event_id, ticket_type, price, transferable, seat, section) values(?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.ticket.edit = UPDATE tickets SET id = ?, created_at = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?  WHERE id = ?
 org.com.ems.queries.ticket.get-all = SELECT * FROM tickets
 org.com.ems.queries.ticket.get-id = SELECT * FROM tickets WHERE id = ?
 org.com.ems.queries.ticket.delete-id = DELETE FROM tickets WHERE id = ?
