Change sponsor_id to multiple sponsors

--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -8,8 +8,8 @@ org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = ?
 org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = ?
 
 # events
-org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsor_id, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.event.edit = UPDATE events SET id = ?, created_at = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsor_id = ?, start_time = ?, duration = ? WHERE id = ?
+org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.event.edit = UPDATE events SET id = ?, created_at = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsors_ids = ?, start_time = ?, duration = ? WHERE id = ?
 org.com.ems.queries.event.get-all = SELECT * FROM events
 org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = ?
 org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = ?
