--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,9 @@ jobs:
         fetch-depth: 0
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@v2.2.0
+      with:
+         args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
       env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
