--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,26 @@
-name: SonarCloud Scan
+# name: SonarCloud Scan
 
-on:
-  push:
-    branches: 
-      - '**'
-  pull_request:
-    branches: 
-      - 'master'
+# on:
+#   push:
+#     branches: 
+#       - '**'
+#   pull_request:
+#     branches: 
+#       - 'master'
 
-jobs:
-  sonarcloud:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
-        fetch-depth: 0
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@v2.2.0
-      with:
-         args: >
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-      env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+# jobs:
+#   sonarcloud:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v4
+#       with:
+#         # Disabling shallow clone is recommended for improving relevancy of reporting
+#         fetch-depth: 0
+#     - name: SonarCloud Scan
+#       uses: sonarsource/sonarcloud-github-action@v2.2.0
+#       with:
+#          args: >
+#             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
+#             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+#       env:
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
