--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'zulu'
         cache: maven
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean package
 
   sonarcloud:
     runs-on: ubuntu-latest
@@ -43,5 +43,8 @@ jobs:
          args: >
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.sources=src/main/java/
+            -Dsonar.language=java
+            -Dsonar.java.binaries=**/target/classes 
       env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
