--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,7 +43,7 @@ jobs:
          args: >
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.sources=src/main/java/
+            -Dsonar.sources=**/src/main/java/
             -Dsonar.language=java
             -Dsonar.java.binaries=**/target/classes 
       env:
