--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,6 +43,8 @@ jobs:
          args: >
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION_KEY }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.sources=event-management-system/src/main/java/
+            -Dsonar.tests=event-management-system/src/main/java/
             -Dsonar.language=java
       env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
