--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'zulu'
         cache: maven
     - name: Build with Maven
-      run: mvn clean package
+      run: mvn clean install
 
   sonarcloud:
     runs-on: ubuntu-latest
