Add java binaries arg

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@v2.2.0
@@ -45,7 +44,7 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=event-management-system/src/main/java/
             -Dsonar.tests=event-management-system/src/test/java/
-            -Dsonar.exclusions=event-management-system/target/**/.java
+            -Dsonar.java.binaries=event-management-system/target/**/.java
             -Dsonar.language=java
       env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
