--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=event-management-system/src/main/java/
             -Dsonar.tests=event-management-system/src/test/java/
-            -Dsonar.java.binaries=event-management-system/target/classes
+            -Dsonar.java.binaries=.
             -Dsonar.language=java
       env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
