Change postgres attribute names & create users table & variable names & getters

--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -8,22 +8,22 @@ org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = ?
 org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = ?
 
 # events
-org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.event.edit = UPDATE events SET id = ?, created_at = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsors_ids = ?, start_time = ?, duration = ? WHERE id = ?
+org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, name, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.event.edit = UPDATE events SET id = ?, created_at = ?, last_updated = ?, name = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsors_ids = ?, start_time = ?, duration = ? WHERE id = ?
 org.com.ems.queries.event.get-all = SELECT * FROM events
 org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = ?
 org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = ?
 
 # organizers
-org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, created_at = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
+org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, name, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, created_at = ?, last_updated = ?, name = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
 org.com.ems.queries.organizer.get-all = SELECT * FROM organizers
 org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = ?
 org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = ?
 
 # sponsors
-org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, created_at = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
+org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, name, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
+org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, created_at = ?, last_updated = ?, name = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
 org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsors
 org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = ?
 org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = ?
