--- a/scripts/docker-postgres/docker-compose.yml
+++ b/scripts/docker-postgres/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_DB=event-management-system
     volumes:
-      - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./triggers-and-functions.sql:/docker-entrypoint-initdb.d/triggers-and-functions.sql
   pgadmin:
     image: dpage/pgadmin4
     environment:
