--- a/event-management-system/src/main/resources/application.properties
+++ b/event-management-system/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=event-management-system
-#logging.level.org.springframework.web=trace
+logging.level.org.springframework.web=trace
+logging.level.org.springframework.security=trace
 logging.level.org.com.ems=trace
 server.port=8080
 #server.servlet.context-path=/api
+spring.security.oauth2.resourceserver.jwt.issuer-uri=localhost:9011
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/.well-known/jwks.json
