--- a/scripts/docker-postgres/docker-compose.yml
+++ b/scripts/docker-postgres/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   postgres:
     image: postgres
     ports:
-      - 5433:5432
+      - "5433:5433"
+    command: -p 5433
     environment:
       - POSTGRES_PASSWORD=pass
       - POSTGRES_USER=user
@@ -18,5 +19,6 @@ services:
       - PGADMIN_LISTEN_PORT=80
     ports:
       - 3131:80
+
     depends_on:
       - postgres
