--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -1,36 +1,36 @@
 # Properties file to store the queries for CRUD operation in the DB
-
+# You could also change the queries to this: DELETE FROM attendees WHERE id = :id -> and you would call .bind("id", uuid))
 # attendees
-org.com.ems.queries.attendee.save = INSERT INTO attendees (id, created_at, last_updated, first_name, last_name, ticket_ids) values(?,?,?,?,?,?)
-org.com.ems.queries.attendee.edit = UPDATE attendees SET id = ?, created_at = ?, last_updated = ?, first_name = ?, last_name = ?, ticket_ids = ? WHERE id = ?
+org.com.ems.queries.attendee.save = INSERT INTO attendees (id, created_at, last_updated, first_name, last_name, ticket_ids) values($1,$2,$3,$4,$5,$6)
+org.com.ems.queries.attendee.edit = UPDATE attendees SET id = $1, last_updated = $2, first_name = $3, last_name = $4, ticket_ids = $5 WHERE id = $6
 org.com.ems.queries.attendee.get-all = SELECT * FROM attendees
-org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = ?
-org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = ?
+org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = $1
+org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = $1
 
 # events
-org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values(?,?,?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.event.edit = UPDATE events SET id = ?, created_at = ?, last_updated = ?, denomination = ?, place = ?, event_type = ?, attendee_ids = ?, organizer_id = ?, limit_of_people = ?, sponsors_ids = ?, start_time = ?, duration = ? WHERE id = ?
+org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12)
+org.com.ems.queries.event.edit = UPDATE events SET id = $1, last_updated = $2, denomination = $3, place = $4, event_type = $5, attendee_ids = $6, organizer_id = $7, limit_of_people = $8, sponsors_ids = $9, start_time = $10, duration = $11 WHERE id = $12
 org.com.ems.queries.event.get-all = SELECT * FROM events
-org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = ?
-org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = ?
+org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = $1
+org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = $1
 
 # organizers
-org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.organizer.edit = UPDATE organizers SET id = ?, created_at = ?, last_updated = ?, denomination = ?, website = ?, information = ?, event_types = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
+org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10)
+org.com.ems.queries.organizer.edit = UPDATE organizers SET id = $1, last_updated = $2, denomination = $3, website = $4, information = $5, event_types = $6, email = $7, phone_number = $8, physical_address = $9  WHERE id = $10
 org.com.ems.queries.organizer.get-all = SELECT * FROM organizers
-org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = ?
-org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = ?
+org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = $1
+org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = $1
 
 # sponsors
-org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values(?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = ?, created_at = ?, last_updated = ?, denomination = ?, website = ?, financial_contribution = ?, email = ?, phone_number = ?, physical_address = ?  WHERE id = ?
+org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9)
+org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = $1, last_updated = $2, denomination = $3, website = $4, financial_contribution = $5, email = $6, phone_number = $7, physical_address = $8  WHERE id = $9
 org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsors
-org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = ?
-org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = ?
+org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = $1
+org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = $1
 
 # tickets
-org.com.ems.queries.ticket.save = INSERT INTO tickets (id, created_at, last_updated, event_id, ticket_type, price, transferable, seat, section) values(?,?,?,?,?,?,?,?,?)
-org.com.ems.queries.ticket.edit = UPDATE tickets SET id = ?, created_at = ?, last_updated = ?, event_id = ?, ticket_type = ?, price = ?, transferable = ?, seat = ?, section = ?  WHERE id = ?
+org.com.ems.queries.ticket.save = INSERT INTO tickets (id, created_at, last_updated, event_id, ticket_type, price, transferable, seat, section) values($1,$2,$3,$4,$5,$6,$7,$8,$9)
+org.com.ems.queries.ticket.edit = UPDATE tickets SET id = $1, last_updated = $2, event_id = $3, ticket_type = $4, price = $5, transferable = $6, seat = $7, section = $8  WHERE id = $9
 org.com.ems.queries.ticket.get-all = SELECT * FROM tickets
-org.com.ems.queries.ticket.get-id = SELECT * FROM tickets WHERE id = ?
-org.com.ems.queries.ticket.delete-id = DELETE FROM tickets WHERE id = ?
+org.com.ems.queries.ticket.get-id = SELECT * FROM tickets WHERE id = $1
+org.com.ems.queries.ticket.delete-id = DELETE FROM tickets WHERE id = $1
