--- a/event-management-system/src/main/resources/application.properties
+++ b/event-management-system/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=event-management-system
 #logging.level.org.springframework.web=trace
 logging.level.org.com.ems=trace
+logging.level.org.springframework.r2dbc=debug
 server.port=8080
 #server.servlet.context-path=/api
