--- a/event-management-system/src/main/resources/properties/db.properties
+++ b/event-management-system/src/main/resources/properties/db.properties
@@ -1,5 +1,7 @@
 # SQL credentials
-org.com.ems.db.driver=org.postgresql.Driver
-org.com.ems.db.url=jdbc:postgresql://localhost:5433/event-management-system
+# full URL: r2dbc:postgresql://localhost:5433/event-management-system
 org.com.ems.db.username=user
 org.com.ems.db.password=pass
+org.com.ems.db.port=5433
+org.com.ems.db.database=event-management-system
+org.com.ems.db.host=localhost
