--- a/common-api/pom.xml
+++ b/common-api/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>spring-web</artifactId>
 			<version>6.1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.4</version>
+		</dependency>
 	</dependencies>
 
 </project>
