--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.application.name=event-management-system
+spring.application.name=event-service
 #logging.level.org.springframework.web=trace
 logging.level.org.com.ems=trace
 logging.level.org.springframework.r2dbc=debug
-server.port=8080
 #server.servlet.context-path=/api
+#random port
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
