--- a/event-service/src/main/resources/properties/queries.properties
+++ b/event-service/src/main/resources/properties/queries.properties
@@ -1,8 +1,8 @@
 # Properties file to store the queries for CRUD operation in the DB
 # You could also change the queries to this: DELETE FROM ems_attendee.attendees WHERE id = :id -> and you would call .bind("id", uuid))
-# ems_events.events
-org.com.ems.queries.event.save = INSERT INTO ems_events.events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12)
-org.com.ems.queries.event.edit = UPDATE ems_events.events SET id = $1, last_updated = $2, denomination = $3, place = $4, event_type = $5, attendee_ids = $6, organizer_id = $7, limit_of_people = $8, sponsors_ids = $9, start_time = $10, duration = $11 WHERE id = $12
-org.com.ems.queries.event.get-all = SELECT * FROM ems_events.events
-org.com.ems.queries.event.get-id = SELECT * FROM ems_events.events WHERE id = $1
-org.com.ems.queries.event.delete-id = DELETE FROM ems_events.events WHERE id = $1
+# ems_event.events
+org.com.ems.queries.event.save = INSERT INTO ems_event.events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12)
+org.com.ems.queries.event.edit = UPDATE ems_event.events SET id = $1, last_updated = $2, denomination = $3, place = $4, event_type = $5, attendee_ids = $6, organizer_id = $7, limit_of_people = $8, sponsors_ids = $9, start_time = $10, duration = $11 WHERE id = $12
+org.com.ems.queries.event.get-all = SELECT * FROM ems_event.events
+org.com.ems.queries.event.get-id = SELECT * FROM ems_event.events WHERE id = $1
+org.com.ems.queries.event.delete-id = DELETE FROM ems_event.events WHERE id = $1
