--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<module>event-service</module>
 		<module>ticket-api</module>
 		<module>ticket-service</module>
+		<module>event-producer</module>
 	</modules>
 
 	<dependencies>
@@ -83,7 +84,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<plugins>
 			<plugin>
