test github actions with sonar

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 	<packaging>pom</packaging>
 
 	<properties>
+		<sonar.organization>evaggelos99-f5395fbc</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>17</java.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
